tests/compile_fail/key_type_mismatch.stderr
error[E0308]: mismatched types
 --> tests/compile_fail/key_type_mismatch.rs:3:38
  |
3 | #[memoized(key_type = (), key_expr = a)]
  |                                      ^ expected `()`, found `bool`
  |
  = note: expected reference `&()`
             found reference `&bool`
  = note: this error originates in the attribute macro `memoized` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0308]: mismatched types
 --> tests/compile_fail/key_type_mismatch.rs:3:38
  |
3 | #[memoized(key_type = (), key_expr = a)]
  |                                      ^ expected `()`, found `bool`
  |
  = note: this error originates in the attribute macro `memoized` (in Nightly builds, run with -Z macro-backtrace for more info)
